Very basic functionality, more like proof of concept for now.

--- a/Source/RazorApp/Pages/Index.cshtml
+++ b/Source/RazorApp/Pages/Index.cshtml
@@ -6,5 +6,7 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>You have arrived at the personal homepage of Thomas Due.</p>
+    <p>I am a software developer, gamer, roleplayer (TTRPG) and father. These are my personal pages, where I present myself, my thought, keep my projects etc.</p>
+    <p>Not everything here will be for everyone, and that is fine.</p>
 </div>
