--- a/Source/RazorApp/Pages/_ViewImports.cshtml
+++ b/Source/RazorApp/Pages/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using RazorApp
-@namespace RazorApp.Pages
+﻿@using Dove.Blog.WebApp
+@namespace Dove.Blog.WebApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
