--- a/Source/RazorApp/Pages/Resume.cshtml
+++ b/Source/RazorApp/Pages/Resume.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Dove.Blog.WebApp.Pages.AboutModel
+@model Dove.Blog.WebApp.Pages.ResumeModel
 
 <div class="content">
     <div>@Html.Raw(Model.PageContent);</div>
