--- a/Source/RazorApp/Pages/Shared/_Layout.cshtml
+++ b/Source/RazorApp/Pages/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Blog">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Content" asp-route-pageName="Resume">My Resume</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Resume">My Resume</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Content" asp-route-pageName="About">About Me</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/About">About Me</a>
                         </li>
                     </ul>
                 </div>
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - Thomas Due - <a asp-area="" asp-page="/Pages/About">About</a>
+            &copy; 2024 - Thomas Due - <a asp-area="" asp-page="/About">About</a>
         </div>
     </footer>
 
