--- a/Source/RazorApp/wwwroot/css/site.css
+++ b/Source/RazorApp/wwwroot/css/site.css
@@ -18,5 +18,21 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: var(--bs-gray-700);
+}
+
+.content {
+    width: 60%;
+    min-width: 600px;
+    box-shadow: 5px 5px 10px black;
+    border: 1px solid var(--bs-gray-700);
+    padding: 10px;
+    margin: auto;
+    background-color: var(--bs-body-bg);
+    height: 90%
+}
+
+.footer {
+    background-color: var(--bs-body-bg);
 }
