Figured out the routing issue for now (work around)

--- a/Source/RazorApp/Pages/Content.cshtml
+++ b/Source/RazorApp/Pages/Content.cshtml
@@ -1,9 +1,18 @@
-@page "{pageName}"
+@page "{pageName=Index}" 
 
 @model ContentModel
-@{}
+@{
+    ViewData["Title"] = Model.Title;
+}
 
 <div class="content">
-    <h1>@Model.PageName</h1>
+    <h1>@Model.Title</h1>
     <div>@Html.Raw(Model.PageContent)</div>
+
+    <div style="font-size: 0.8em; color:darkgrey; display: flex; flex-direction:row; justify-content: space-between">
+        <span>Created: <i>@Html.FormatValue(Model.Created, "{0:yyyy-MM-dd  HH:mm}")</i></span>
+        <span>Last Updated: <i>@Html.FormatValue(Model.Updated, "{0:yyyy-MM-dd  HH:mm}")</i></span>
+        <span>Author: <i>@Model.Author</i></span>
+    </div>
+
 </div>
