--- a/Source/RazorApp/Pages/Index.cshtml
+++ b/Source/RazorApp/Pages/Index.cshtml
@@ -7,11 +7,10 @@
 <div class="content">
     <div>@Html.Raw(Model.PageContent)</div>
 
-
-    <div style="font-size: 0.8em; color:darkgrey">
-        <span>@Model.Created</span>
-        <span>@Model.Updated</span>
-        <span>@Model.Author</span>
+    <div style="font-size: 0.8em; color:darkgrey; display: flex; flex-direction:row; justify-content: space-between">
+        <span>Created: <i>@Html.FormatValue(Model.Created, "{0:yyyy-MM-dd  HH:mm}")</i></span>
+        <span>Last Updated: <i>@Html.FormatValue(Model.Updated, "{0:yyyy-MM-dd  HH:mm}")</i></span>
+        <span>Author: <i>@Model.Author</i></span>
     </div>
 
 </div>
