--- a/Source/RazorApp/Pages/Resume.cshtml
+++ b/Source/RazorApp/Pages/Resume.cshtml
@@ -1,6 +1,16 @@
 @page
-@model Dove.Blog.WebApp.Pages.ResumeModel
+@model ResumeModel
+@{
+    ViewData["Title"] = Model.Title;
+}
 
 <div class="content">
-    <div>@Html.Raw(Model.PageContent);</div>
+    <div>@Html.Raw(Model.PageContent)</div>
+
+    <div style="font-size: 0.8em; color:darkgrey; display: flex; flex-direction:row; justify-content: space-between">
+        <span>Created: <i>@Html.FormatValue(Model.Created, "{0:yyyy-MM-dd  HH:mm}")</i></span>
+        <span>Last Updated: <i>@Html.FormatValue(Model.Updated, "{0:yyyy-MM-dd  HH:mm}")</i></span>
+        <span>Author: <i>@Model.Author</i></span>
+    </div>
+
 </div>
