--- a/Source/RazorApp/Pages/Shared/_Layout.cshtml
+++ b/Source/RazorApp/Pages/Shared/_Layout.cshtml
@@ -26,10 +26,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Blog">Blog</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Resume">My Resume</a>
+                            <a class="nav-link text-dark" href="/Content/Resume">My Resume</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/About">About Me</a>
+                            <a class="nav-link text-dark" href="/Content/About">About Me</a>
                         </li>
                     </ul>
                 </div>
@@ -43,8 +43,9 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - Thomas Due - <a asp-area="" asp-page="/About">About</a>
+        <div class="container" style="text-align: center">
+            <span>&copy; Copyright 2024, <a href="/Content/About">Thomas Due</a></span>
+            <span>Powered by .NET @Environment.Version</span>
         </div>
     </footer>
 
