--- a/Source/Dove.Blog.WebApp/Components/Pages/Blog.razor
+++ b/Source/Dove.Blog.WebApp/Components/Pages/Blog.razor
@@ -3,6 +3,8 @@
 @page "/blog/Categories/{*category}"
 @page "/blog/Tags/{*tag}"
 
+@using Dove.Blog.WebApp.Components.Parts
+
 @inherits BlogPage
 
 <PageTitle>@Title</PageTitle>
@@ -17,98 +19,17 @@ else
         <div class="post col-9">
             @if (PageContent != null)
             {
-                <h1>@Title</h1>
-                <div>
-                    @PageContent
-                </div>
-
-                <hr />
-
-                <div>
-                    <p>
-                        <span>Posted in @GetCategories()</span>                        
-                        <span>on @CurrentPost?.Posted.ToString("g")</span>
-                        <span>by @CurrentPost?.Author</span>
-                    </p>
-                    <p><span>Tags: </span>@GetTags()</p>
-                </div>
-
-                <hr />
-
-                <div class="d-flex justify-content-between">
-                    @if (PreviousSlug != null)
-                    {
-                        <a href="/Blog/@PreviousSlug">&lt;&lt; Previous</a>
-                    }
-                    else
-                    {
-                        <span class="text-secondary">&lt;&lt; Previous</span>
-                    }
-
-                    <a href="/Blog">Back to Blog</a>
-
-                    @if (NextSlug != null)
-                    {
-                        <a href="/Blog/@NextSlug">Next &gt;&gt;</a>
-                    }
-                    else
-                    {
-                        <span class="text-secondary">Next &gt;&gt;</span>
-                    }
-                </div>
+                <BlogContent CurrentPost="@CurrentPost" PageContent="@PageContent" />
+                <BlogNavigation PreviousSlug="@PreviousSlug" NextSlug="@NextSlug" />
             }
             else
             {
-                <h2>Latest Blog Posts</h2>
-                @foreach (var post in Posts.Take(10))
-                {
-                    <div class="card mb-3 shadow p-2">
-                        <h3><a href="/Blog/@post.Slug">@post.Title</a></h3>
-                        <p>@post.Summary</p>
-                        <a href="/Blog/@post.Slug">Read more...</a>
-                    </div>
-                }
-                @if (Posts.Count() > 10)
-                {
-                    <div class="load-more">
-                        <a href="#">Load more posts...</a>
-                    </div>
-                }
+                <BlogPostList Posts="@Posts" />
             }
         </div>
 
         <div class="sidebar col-3">
-            <h4>Categories</h4>
-            <ul>
-                @foreach (var category in Categories.Take(8))
-                {
-                    <li>
-                        <a href="">@category</a>
-                    </li>
-                }
-                @if (Categories.Count() > 8)
-                {
-                    <li>
-                        <a href="">More...</a>
-                    </li>
-                }
-            </ul>
-
-            <h4>Frequently Used Tags</h4>
-            <ul>
-                @foreach (var tag in Tags.Take(8))
-                {
-                    <li>
-                        <a href="">@tag</a>
-                    </li>
-                }
-                @if (Tags.Count() > 8)
-                {
-                    <li>
-                        <a href="">More...</a>
-                    </li>
-                }
-            </ul>
+            <BlogSidebar Categories="@Categories" Tags="@Tags" />
         </div>
     </div>
 }
