Preliminarily finished Category and Tags pages. Spiced the post list up a bit.

--- a/Source/Dove.Blog.WebApp/Components/Pages/Blog.razor
+++ b/Source/Dove.Blog.WebApp/Components/Pages/Blog.razor
@@ -24,7 +24,7 @@ else
             }
             else
             {
-                <BlogPostList Posts="@Posts" />
+                <BlogPostList ListTitle="@ListTitle" Posts="@Posts" />
             }
         </div>
 
