--- a/Source/Dove.Blog.WebApp/Components/Layout/MainLayout.razor
+++ b/Source/Dove.Blog.WebApp/Components/Layout/MainLayout.razor
@@ -1,3 +1,4 @@
+@inject IHostEnvironment HostEnvironment
 @inherits LayoutComponentBase
 
 <div class="page">
@@ -31,7 +32,14 @@
 </div>
 
 <div id="blazor-error-ui" data-nosnippet>
-    An unhandled error has occurred.
+    @if (HostEnvironment.IsProduction())
+    {
+        <span>An error has occurred.</span>
+    }
+    else
+    {
+        <span>An unhandled exception occurred.</span>
+    }
     <a href="." class="reload">Reload</a>
     <span class="dismiss">🗙</span>
 </div>
